# chat

./: .env.example  Dockerfile  Makefile  docker-compose.yaml  mypy.ini  pyproject.toml
chat/: main.py
chat/api/: consts.py  routes.py
chat/api/v1/: __init__.py  chats.py  messages.py
chat/crud/: __init__.py  chats.py  messages.py
chat/db/: db.py
chat/handlers/: deps.py  routes.py
chat/handlers/v1/: __init__.py  messages.py
chat/migrations/: autogenerated_tables.py  env.py
chat/migrations/versions/: 2023_05_25_0621-25260a899187_added_message_table.py  2023_05_28_1121-0dcba5535af0_initial_migrations.py  2023_05_29_0847-427fe58301bc_add_chat_id_to_messages_participants_.py
chat/models/: __init__.py  base.py  chat.py  chat_participant.py  message.py  messages_participants.py
chat/pagination/: __init__.py  message_param.py
chat/schemas/: __init__.py  request.py  response.py
chat/schemas/chats/: __init__.py  request.py  response.py
chat/schemas/messages/: __init__.py  request.py  response.py
chat/settings/: settings.py
chat/utils/: __init__.py  row2dict.py
