[tool.poetry]
name = "chat"
version = "0.1.0"
description = "Websocker server for chat."
authors = ["Sergey Rubnikovich <sergeyrubnikovich@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
orjson = "^3.8.12"
SQLAlchemy = "^2.0.14"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
fastapi-pagination = "^0.12.4"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.2"
pytest = "^7.3.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
freezegun = "^1.2.2"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
known_local_folder = "chat"
lines_after_imports = 2
multi_line_output = 3
line_length = 100
include_trailing_comma = true
